--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/magister
+spring.datasource.url = jdbc:mysql://localhost:3306/mgr
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.testWhileIdle = true
