--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/mgr
+spring.datasource.url = jdbc:mysql://localhost:3306/testowa
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.testWhileIdle = true
@@ -20,6 +20,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # ===============================
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+spring.resources.static-locations: file:./src/main/resources/static/
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
